css fix for safari vertical alignment

--- a/projects/ad-button-slide/src/lib/ad-button-slide.component.css
+++ b/projects/ad-button-slide/src/lib/ad-button-slide.component.css
@@ -5,6 +5,7 @@
   overflow:hidden;
   cursor:pointer;
   display:inline-block;
+  vertical-align:top;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
