--- a/projects/ad-button-slide/src/lib/ad-button-slide.component.css
+++ b/projects/ad-button-slide/src/lib/ad-button-slide.component.css
@@ -6,11 +6,11 @@
   cursor:pointer;
   display:inline-block;
   vertical-align:top;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s cubic-bezier(.54,.02,0,1.69);
+  -moz-transition: all 0.3s cubic-bezier(.54,.02,0,1.69);
+  -ms-transition: all 0.3s cubic-bezier(.54,.02,0,1.69);
+  -o-transition: all 0.3s cubic-bezier(.54,.02,0,1.69);
+  transition: all 0.3s cubic-bezier(.54,.02,0,1.69);
 }
 
 .btn-slide.mini {
@@ -34,11 +34,17 @@
   padding-right:34px;
   font-size:0.7em;
 
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -moz-transition: background-color 0.3s ease-in-out;
+  -ms-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+
+  -webkit-transition: right 0.3s ease-in-out;
+  -moz-transition: right 0.3s ease-in-out;
+  -ms-transition: right 0.3s ease-in-out;
+  -o-transition: right 0.3s ease-in-out;
+  transition: right 0.3s ease-in-out;
 }
 
 .btn-slide > i {
@@ -51,11 +57,17 @@
   justify-content:center;
   align-items:center;
 
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -moz-transition: background-color 0.3s ease-in-out;
+  -ms-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+
+  -webkit-transition: right 0.3s ease-in-out;
+  -moz-transition: right 0.3s ease-in-out;
+  -ms-transition: right 0.3s ease-in-out;
+  -o-transition: right 0.3s ease-in-out;
+  transition: right 0.3s ease-in-out;
 }
 
 .btn-slide:hover > i {
