--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
-<h4>With text-align:left</h4>
+<h4>With text-align:left (button edit with backgroundOver)</h4>
 <div>
 
-  <ad-button-slide icon="fa fa-trash" label="Delete this this" buttonClass="btn-slide-2" background="red"></ad-button-slide>
-  <ad-button-slide icon="fa fa-pencil" label="Edit this" background="blue"></ad-button-slide>
-  <ad-button-slide icon="fa fa-plus" label="Add this" background="green"></ad-button-slide>
+  <ad-button-slide icon="fas fa-trash" label="Delete this" background="#c3615f"></ad-button-slide>
+  <ad-button-slide icon="fas fa-pencil-alt" label="Edit this" background="#5f82c3" backgroundOver="#5f82c399" foregroundOver="#333"></ad-button-slide>
+  <ad-button-slide icon="fas fa-plus" label="Add this" background="#55c16c"></ad-button-slide>
 
 </div>
 
-<h4>With text-align:right</h4>
+<h4>With text-align:right (and mode mini)</h4>
 <div style="text-align:right;height:30px;">
 
-  <ad-button-slide mini="1" icon="fa fa-trash" label="Delete this" buttonClass="btn-slide-2"></ad-button-slide>
-  <ad-button-slide mini="1" icon="fa fa-pencil" label="Edit this"></ad-button-slide>
+  <ad-button-slide mini="1" icon="fas fa-trash" label="Delete this"></ad-button-slide>
+  <ad-button-slide mini="1" icon="fas fa-pencil-alt" label="Edit this"></ad-button-slide>
 
 </div>
 
@@ -19,8 +19,8 @@
 <div style="position:relative;">
 
   <div style="position:absolute;right:0px;top:0px;">
-    <ad-button-slide icon="fa fa-trash" label="Delete this" buttonClass="btn-slide-2"></ad-button-slide>
-  <ad-button-slide icon="fa fa-pencil" label="Edit this"></ad-button-slide>
+    <ad-button-slide icon="fas fa-trash" label="Delete this"></ad-button-slide>
+  <ad-button-slide icon="fas fa-pencil-alt" label="Edit this"></ad-button-slide>
   </div>
 
 </div>
