--- a/projects/ad-button-slide/src/lib/ad-button-slide.component.html
+++ b/projects/ad-button-slide/src/lib/ad-button-slide.component.html
@@ -1,7 +1,7 @@
 
 <div #adbuttonslidediv
-(mouseover)="mouseOverButton($event)"
-(mouseout)="mouseOutButton($event)"
+(mouseenter)="mouseOverButton($event)"
+(mouseleave)="mouseOutButton($event)"
 class="btn-slide"
 [class.mini]="mini">
     <span>{{ label }}</span>
