--- a/projects/ad-button-slide/src/lib/ad-button-slide.component.html
+++ b/projects/ad-button-slide/src/lib/ad-button-slide.component.html
@@ -1,9 +1,9 @@
 
-<div #adbuttonslidediv
+<div
 (mouseenter)="mouseOverButton($event)"
 (mouseleave)="mouseOutButton($event)"
 class="btn-slide"
-[class.mini]="mini">
+[class.mini]="mini" #adbuttonslidediv>
     <span>{{ label }}</span>
     <i [class]="icon"></i>
 </div>
